ctowasm/test/samples/error/assignment/assign_to_const.c
/**
 * Attempting to assign to const.
 */

int main() {
  const int x;
  x = 19;
}